<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_MachineStatus" Id="{2fcb39d9-b828-4718-8c76-1a935a816f27}">
    <Declaration><![CDATA[TYPE ST_MachineStatus :
STRUCT
	////////////////////////////:
	eMachineState				:E_MachineState;
	
	// Status Flags:
	bSystemPowerUp 				:BOOL;
	bImmediateStopped 			:BOOL;
	bInitialising 				:BOOL;
	bReadyToStart 				:BOOL;
	bAutoCycle 					:BOOL;
	bStandby					:BOOL;
	bStopping					:BOOL;	
	bCycleStopped 				:BOOL;
	bImmediateFault 			:BOOL;
	bCycleStopFault 			:BOOL;
	bManualMode					:BOOL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>